[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemies/godot-sprite.png" type="Texture" id=2]
[ext_resource path="res://src/dreamscape/CombatElements/CombatEntity.gd" type="Script" id=3]
[ext_resource path="res://src/dreamscape/CombatElements/ActiveEffects.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/shield.png" type="Texture" id=5]
[ext_resource path="res://src/dreamscape/CombatElements/Highlight2.gd" type="Script" id=6]
[ext_resource path="res://shaders/outline.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 0.0
shader_param/pattern = 2
shader_param/inside = false
shader_param/add_margins = false

[sub_resource type="GDScript" id=2]
script/source = "extends Area2D


func get_class() -> String:
	return(\"CombatEntity\")

func get_combat_entity() -> Node:
	return(get_parent().get_parent())
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="CombatEntity" type="VBoxContainer" groups=[
"CombatEntities",
]]
margin_right = 65.0
margin_bottom = 143.0
grow_vertical = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 69.0
margin_bottom = 36.0
mouse_filter = 1

[node name="Incoming" type="GridContainer" parent="CenterContainer"]
margin_left = 34.0
margin_right = 34.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
columns = 3

[node name="Art" type="MarginContainer" parent="."]
margin_top = 40.0
margin_right = 69.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Texture" type="TextureRect" parent="Art"]
material = SubResource( 1 )
margin_right = 69.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlight" type="Control" parent="Art"]
margin_right = 69.0
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Art"]
collision_mask = 2
script = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Art/Area2D"]
shape = SubResource( 3 )

[node name="Name" type="Label" parent="."]
margin_top = 44.0
margin_right = 69.0
margin_bottom = 58.0
text = "Gaslighter"
align = 1
autowrap = true

[node name="HBC" type="HBoxContainer" parent="."]
margin_top = 62.0
margin_right = 69.0
margin_bottom = 98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defence" type="CenterContainer" parent="HBC"]
margin_right = 36.0
margin_bottom = 36.0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="HBC/Defence"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Amount" type="Label" parent="HBC/Defence"]
margin_left = 14.0
margin_top = 11.0
margin_right = 22.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HBC"]
margin_left = 40.0
margin_top = 11.0
margin_right = 69.0
margin_bottom = 25.0
mouse_filter = 1
text = "0/30"

[node name="ActiveEffects" parent="." instance=ExtResource( 4 )]
margin_top = 102.0
margin_right = 69.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 36 )
custom_constants/vseparation = 15
custom_constants/hseparation = 15

[node name="Description" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0

[node name="Label" type="Label" parent="Description"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 18.0

[connection signal="mouse_entered" from="Art" to="." method="_on_Art_mouse_entered"]
[connection signal="mouse_exited" from="Art" to="." method="_on_Art_mouse_exited"]
[connection signal="mouse_entered" from="HBC/Defence" to="." method="_on_Defence_mouse_entered"]
[connection signal="mouse_exited" from="HBC/Defence" to="." method="_on_Description_mouse_exited"]
[connection signal="mouse_entered" from="HBC/Health" to="." method="_on_Health_mouse_entered"]
[connection signal="mouse_exited" from="HBC/Health" to="." method="_on_Description_mouse_exited"]
